# MAT-SZ

./: .gitignore  AGENTS.md  README.md  TODO  bench_levels.sh  bench_subset.sh  eval.sh  eval_tensor.sh  profile.sh  profile_batch.sh  profile_tensor.sh  profile_train_h100.sh  pyproject.toml  pytest.ini  requirements.txt  train.sh  train_h100.sh
deepsz/: __init__.py  baselines.py  bitstream.py  cli.py  codec.py  gnn_codec.py  gnn_predictor.py  huffman.py  levels.py  predictor.py  quantizer.py  rans.py  skel_codec.py
matsz/: __init__.py  baselines.py  bitstream.py  cli.py  codec.py  gnn_predictor.py  levels.py  predictor.py
scripts/: _test_gpu.py  bench_agg_level.py  bench_gnn_subset.py  bench_levels.py  benchmark_kodak.py  check_chunked_memory.py  download_checkpoint.py  eval_predictors.py  eval_tensor.py  plot_mat_masking.py  plot_mat_residuals.py  plot_sz_residuals.py  profile_chunked_tensor.py  profile_gnn.py  profile_gnn_inference.py  sanity_check_mat.py  train_gnn.py
tests/: __init__.py  helpers.py  test_bench_gnn_subset.py  test_bitstream.py  test_codec_diagnostics.py  test_codec_mock.py  test_e2e_real.py  test_eval_predictors.py  test_gnn_codec.py  test_gnn_codec_chunked.py  test_gnn_predictor.py  test_huffman.py  test_interp_predictor.py  test_levels.py  test_quantizer.py  test_rans.py  test_skel_codec.py  test_train_gnn.py  test_vs_sz3.py
